--- a/sass/web.site/modules/_breaking-news-banner.sass
+++ b/sass/web.site/modules/_breaking-news-banner.sass
@@ -1,34 +1,25 @@
-%breaking-news-scaffold
+.breaking-news-banner
 	background: #ffe246
 	color: $black
+	display: block
 	font-size: remify(14px)
-	font-weight: bold
 	letter-spacing: $zon-letter-spacing-m
-	line-height: 1
-	margin: 0 (-$page-padding) remify(-10px)
+	padding: remify(15px) $page-padding
 	text-align: center
-	text-transform: uppercase
-
-.breaking-news-banner
-	@extend %breaking-news-scaffold
-	&__link
-		&:visited
-			color: $zon-charcoal
-		&:hover
-			color: $black
-		color: $zon-charcoal
-		display: block
-		padding: remify(18px) 0
-		+respond-min($break-tablet-min)
-			margin-top: remify(24px)
-			padding: remify(22px) 0
+	+respond-min($break-tablet-min)
+		margin-top: remify(24px)
+	+respond-min($break-desktop-min)
+		padding-top: remify(20px)
+		padding-bottom: remify(20px)
+	&__label
+		text-transform: uppercase
 	&__time
-		font-weight: normal
 		padding-left: remify(4px)
+		text-transform: uppercase
 	&__title
 		display: block
-		font-weight: normal
-		margin-top: remify(10px)
+		font-size: remify(16px)
+		letter-spacing: $zon-letter-spacing-s
 		+respond-min($break-tablet-min)
 			display: inline
 	&__title:before
@@ -40,9 +31,7 @@
 			vertical-align: middle
 			width: 40px
 			margin: 0 remify(10px) 0 remify(5px)
-	&--article
-		margin: 0 (-$page-padding)
-		padding: remify(18px) 0
-		+respond-min($break-desktop-min)
-			margin: 0 (-$article-gutter-desktop) 0 (-$article-gutter-desktop)
-			padding: remify(22px) 0
+
+a.breaking-news-banner
+	// normal, hover, active, visited, focus
+	+link-colors($black, $black, $color-link--active, $black, $color-link--focus)
