ZON-1493: Mark description

--- a/src/zeit/web/site/templates/column.html
+++ b/src/zeit/web/site/templates/column.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="column-heading__lower">
-            <div class="article__item" itemprop="description">
+            <div class="article__item">
                 <div class="column-heading__inner">
                     <div class="column-heading__summary">
-                        <div class="summary">
+                        <div class="summary" itemprop="description">
                             {{ view.subtitle | hide_none }}
                         </div>
                         <div class="metadata metadata--column">
