--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -15,16 +15,16 @@
 				width: 100%
 
 		+respond-min($break-desktop-min)
-			max-width: remify(660px)
+			max-width: em(660px)
 			margin-left: auto
 			margin-right: auto
 
 			&--wide
-				max-width: remify(820px)
+				max-width: em(820px)
 				margin-top: em(40px)
 
 			&--full
-				max-width: auto
+				max-width: none
 
 .article__subheading,
 .article-page__page-teaser
