--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -8,6 +8,10 @@
 
 	&__lower
 		background-color: $cararra
+		padding: $medium $page-padding
+		+respond-min($break-phablet-min)
+			padding-top: $big
+			padding-bottom: $big
 
 	&__inner
 		position: relative
@@ -92,11 +96,5 @@
 		+respond-min($break-tablet-min)
 			font-size: remify(32px)
 			line-height: 1.5
-		&__link
+		a
 			+link-colors($cararra, $white, $white, $cararra, $white)
-
-	&__summary
-		padding: $medium 0
-		line-height: percentage(22/18)
-		+respond-min($break-phablet-min)
-			padding: $big 0
