ZON-1493: Polish author

--- a/sass/web.site/modules/article/_column-heading.sass
+++ b/sass/web.site/modules/article/_column-heading.sass
@@ -88,7 +88,7 @@
 		color: $cararra
 		font-family: $font-franziska
 		font-style: italic
-		margin-top: 0
+		font-weight: bold
 		font-size: remify(18px)
 		line-height: percentage(22/18)
 		+respond-max($break-phablet-min)
