--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -64,6 +64,7 @@
 @import "modules/article/article-heading"
 @import "modules/article/metadata"
 @import "modules/pagination"
+@import "modules/article/portraitbox"
 
 // article - column
 @import "modules/article/column-heading"
