article widths need to be in rem

--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -15,12 +15,12 @@
 				width: 100%
 
 		+respond-min($break-desktop-min)
-			max-width: em(660px)
+			max-width: remify(660px)
 			margin-left: auto
 			margin-right: auto
 
 			&--wide
-				max-width: em(820px)
+				max-width: remify(820px)
 				margin-top: em(40px)
 
 			&--full
