ZON-1493: Remify the world

--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -6,7 +6,7 @@
 		width: 100%
 
 		&--wide
-			margin-bottom: em(40px)
+			margin-bottom: remify(40px)
 			margin-left: -$page-padding
 			margin-right: -$page-padding
 			// TODO: make this specific or remove
@@ -21,7 +21,7 @@
 
 			&--wide
 				max-width: remify(820px)
-				margin-top: em(40px)
+				margin-top: remify(40px)
 
 			&--full
 				max-width: none
