--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -6,8 +6,8 @@
         {% set index = loop.index %}
         {% block before_module_include scoped %}{% endblock %}
         {% include
-            ["zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout + ".tpl",
-             "zeit.web.site:templates/inc/module/" + teaser_block | get_teaser_layout + ".html",
+            ["zeit.web.site:templates/inc/module/" + teaser_block | get_teaser_layout + ".html",
+             "zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout + ".tpl",
              "zeit.web.site:templates/inc/teaser/default.tpl"] %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
