--- a/sass/web.site/modules/article/_portraitbox.sass
+++ b/sass/web.site/modules/article/_portraitbox.sass
@@ -1,4 +1,5 @@
 .portraitbox
+	+default-article-textlink
 	font-family: $font-tabletgothic
 	font-size: remify(14px)
 	line-height: 1.2
@@ -20,4 +21,3 @@
 	&__body
 		color: $zon_grey
 		letter-spacing: $zon-letter-spacing-s
-
