Fix margin of article items

--- a/src/zeit/web/site/templates/gallery.html
+++ b/src/zeit/web/site/templates/gallery.html
@@ -5,7 +5,7 @@
         {{ blocks.inlinegallery(view.images, wrapper_class='gallery') }}
     </div>
     <div class="article-page">
-        <div class="article__item gallery__description">
+        <div class="gallery__description article__item">
             {{ view.galleryText|safe }}
         </div>
     </div>
