--- a/sass/web.site/modules/article/_paragraph.sass
+++ b/sass/web.site/modules/article/_paragraph.sass
@@ -2,6 +2,7 @@
 	font-family: $font-franziska
 	font-size: remify(18px)
 	line-height: 1.4
+	margin-top: 0
 	margin-bottom: .6em
 
 	+respond-min($break-tablet-min)
