--- a/src/zeit/web/site/templates/article_komplett.html
+++ b/src/zeit/web/site/templates/article_komplett.html
@@ -4,7 +4,7 @@
     {% for page in view.pages %}
         <div class="article-page">
             {% if not loop.first %}
-            <h3 class="article-page__page-teaser">{{ page.teaser }}</h3>
+            <h3 class="article-page__page-teaser article__item">{{ page.teaser }}</h3>
             {% endif %}
             {{ render_page(page) }}
         </div>
