--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,13 +1,13 @@
 <div class="{{ 'cp-area' | with_mods(area.width | area_width) }} {{ area.layout | hide_none }}">
     {% block before_module_list %}{% endblock %}
-    {% for teaser_block in area -%}
+    {% for teaser_block in area.values() -%}
     {# For compat reasons, we call all our modules teaser_block #}
         {% set teaser = teaser_block | first_child %}
         {% set index = loop.index %}
         {% block before_module_include scoped %}{% endblock %}
         {% include
-            ["zeit.web.site:templates/inc/module/" + teaser_block | get_teaser_layout + ".html",
-             "zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout + ".tpl",
+            ["zeit.web.site:templates/inc/module/" + teaser_block | get_teaser_layout | hide_none + ".html",
+             "zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout | hide_none + ".tpl",
              "zeit.web.site:templates/inc/teaser/default.tpl"] %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
