ZON-1550: Ensure snapshot region is always on last position

--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -30,4 +30,9 @@ Available attributes:
     <div class="cp-region">
         {%- include "zeit.web.site:templates/inc/cp_area_parquet.html" ignore missing -%}
     </div>
+
+    {% with region = view.region_snapshot %}
+        {%- include ["zeit.web.site:templates/inc/region/" + region | get_attr('layout', '') + ".html",
+                     "zeit.web.site:templates/inc/region/default.html"] ignore missing -%}
+    {% endwith %}
 {% endblock main %}
