--- a/sass/web.site/modules/video/_video-stage-main.sass
+++ b/sass/web.site/modules/video/_video-stage-main.sass
@@ -1,6 +1,9 @@
 .video-stage-main
 	margin: 0 (-$page-padding)
+	padding: 0
 	+respond-min($break-phablet-min)
 		margin: 0
 	+respond-min($break-desktop-min)
 		display: table-cell
+		padding: remify($wide--px) remify(20px) 0 0
+		width: remify(620px + 20px)
