--- a/src/zeit/web/magazin/templates/inc/cp_area_monothematicblock.html
+++ b/src/zeit/web/magazin/templates/inc/cp_area_monothematicblock.html
@@ -18,7 +18,7 @@ Available attributes:
         <div class="mtb__subtitle">{{ view.monothematic_block.teaserText }}</div>
         {% endif %}
         <div class="mtb__teasers__wrap">
-            {{ cp.include_teaser_block(view.monothematic_block.values()) }}
+            {{ cp.include_module(view.monothematic_block.values()) }}
         </div>
     </div><!-- end: .mtb__wrap -->
 </div>
