--- a/src/zeit/web/magazin/templates/inc/cp_area_teaserbar.html
+++ b/src/zeit/web/magazin/templates/inc/cp_area_teaserbar.html
@@ -11,7 +11,7 @@ Available attributes:
 <div class="cp_teaserbar__wrap">
     <div class="cp_teaserbar">
         <div class="cp_teaserbar__teasers__wrap">
-            {{ cp.include_teaser_block(view.teaserbar.values()) }}
+            {{ cp.include_module(view.teaserbar.values()) }}
         </div>
     </div><!-- end: .cp_teaserbar__wrap -->
 </div>
