--- a/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_button_teaser_template.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_button_teaser_template.html
@@ -5,7 +5,7 @@ Default teaser template to inherit from.
 Available attributes:
     cp
     lama
-    teaser_block
+    module
     teaser
 
 All calling templates have to provide:
@@ -19,7 +19,7 @@ All calling templates have to provide:
 {% import 'zeit.web.magazin:templates/macros/centerpage_macro.tpl' as cp with context %}
 {% import 'zeit.web.magazin:templates/macros/layout_macro.tpl' as lama with context %}
 
-{%- set image = get_teaser_image(teaser_block, teaser) %}
+{%- set image = get_teaser_image(module, teaser) %}
 
 <div class="cp_button cp_button--{{ self.format() }}{{ cp.advertorial_modifier(teaser.product_text, view.is_advertorial) | default('') }}">
 
