--- a/src/zeit/web/site/templates/inc/module/printbox.html
+++ b/src/zeit/web/site/templates/inc/module/printbox.html
@@ -1,4 +1,4 @@
-{% if teaser_block.has_digital_ad -%}
+{% if module.has_digital_ad -%}
 
 <aside class="print-box print-box--angebot">
     <div class="print-box__heading">
