--- a/src/zeit/web/magazin/templates/inc/cp_area_lead_2.html
+++ b/src/zeit/web/magazin/templates/inc/cp_area_lead_2.html
@@ -9,8 +9,8 @@ Available attributes:
 {%- import 'zeit.web.magazin:templates/macros/centerpage_macro.tpl' as cp with context -%}
 
 <div class="cp_lead__wrap">
-	{{ cp.include_teaser_block(view.area_lead_2) }}
+	{{ cp.include_module(view.area_lead_2) }}
 </div>
 <div class="cp_informatives__wrap">
-	{{ cp.include_teaser_block(view.area_informatives_2) }}
+	{{ cp.include_module(view.area_informatives_2) }}
 </div>
