--- a/src/zeit/web/magazin/templates/inc/teaser/fullgraphical.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/fullgraphical.html
@@ -12,10 +12,10 @@ Parameters:
 
 {%- import 'zeit.web.magazin:templates/macros/layout_macro.tpl' as lama with context -%}
 
-{%- set image = teaser_block.image | get_repository_image -%}
+{%- set image = module.image | get_repository_image -%}
 
 <div class='teaser-fullgraphical'>
-    <a href="{{ teaser_block.referenced_object | create_url }}">
+    <a href="{{ module.referenced_object | create_url }}">
         <div class="teaser-fullgraphical__media-container scaled-image">
             {{ lama.insert_responsive_image(image, 'teaser-fullgraphical__media-item') }}
         </div>
