--- a/src/zeit/web/site/templates/inc/module/buzz.html
+++ b/src/zeit/web/site/templates/inc/module/buzz.html
@@ -1,13 +1,13 @@
-<div class="{{ 'buzz-box' | with_mods(teaser_block.layout) }}">
-    <div class="{{ 'buzz-box__heading' | with_mods(teaser_block.layout) }}">
-        {{ teaser_block.header }}
+<div class="{{ 'buzz-box' | with_mods(module.layout) }}">
+    <div class="{{ 'buzz-box__heading' | with_mods(module.layout) }}">
+        {{ module.header }}
     </div>
-    <div class="{{ 'buzz-box__teasers' | with_mods(teaser_block.layout) }}">
-        {% for teaser in teaser_block -%}
+    <div class="{{ 'buzz-box__teasers' | with_mods(module.layout) }}">
+        {% for teaser in module -%}
             {% with -%}
                 {% set index = loop.index %}
-                {% set layout = teaser_block.layout %}
-                {% include "zeit.web.site:templates/inc/teaser/" + teaser_block.layout + ".tpl" with context %}
+                {% set layout = module.layout %}
+                {% include "zeit.web.site:templates/inc/teaser/" + module.layout + ".tpl" with context %}
             {%- endwith %}
         {%- endfor %}
     </div>
