--- a/sass/web.site/modules/teaser/_teaser-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-column.sass
@@ -11,7 +11,7 @@ $teaser-column-mobile-image-size: 80px
 	background: $color-column-background
 	border-top: none
 	padding: $petite
-	margin: em(40px) (-$page-padding) $petite (-$page-padding)
+	margin: em(40px) (-$page-padding) 0 (-$page-padding)
 	position: relative
 	box-shadow: inset 0 $teaser-column-shadow 0 0 $color-column-shadow
 	+respond-min($break-tablet-min)
