--- a/sass/web.site/modules/video/_video-text-playbutton.sass
+++ b/sass/web.site/modules/video/_video-text-playbutton.sass
@@ -12,7 +12,7 @@
 		display: none
 		&--block
 			font-weight: bold
-			letter-spacing: 0.05em
+			letter-spacing: $zon-letter-spacing-m
 			text-transform: uppercase
 			+respond-min($break-phablet-min)
 				display: inline
