ZON-1544: Use SASS variable

--- a/sass/web.site/modules/video/_video-stage-heading.sass
+++ b/sass/web.site/modules/video/_video-stage-heading.sass
@@ -3,7 +3,7 @@
 	display: block
 	font-size: remify(18px)
 	font-weight: bold
-	letter-spacing: 0.05em
+	letter-spacing: $zon-letter-spacing-m
 	line-height: 1.125
 	text-align: center
 	margin: 0 auto
