--- a/sass/web.site/modules/article/_infobox.sass
+++ b/sass/web.site/modules/article/_infobox.sass
@@ -41,11 +41,16 @@
 	&__inner
 		max-height: 0px
 		overflow: hidden
+		// obviously we left the BEM path here
+		// cause in the moment, we have no influence on html in infoboxes
+		// for backwards compatibility puposes
+		// sorry for that, http://i.giphy.com/sSlq4iEQ4KdDa.gif
 		p
 			color: $zon_grey
 			font-family: $font-tabletgothic
 			font-size: remify(14px)
 			line-height: remify(20px)
+			margin: remify(5px 0 10px 0)
 		figure
 			margin: remify(10px) 0
 		.figure__caption
@@ -55,6 +60,8 @@
 		img
 			max-width: 100%
 
+// explicit unBEMmish code to realize acordion per css with checkboxes
+// sorry for that, http://i.giphy.com/sSlq4iEQ4KdDa.gif
 .infobox__checkbox:checked ~ h3 > .infobox__label:after
 	content: "–"
 .infobox__checkbox:checked ~ .infobox__inner
