ZON-1329: add float-clearance for portraitbox/ads

--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -61,6 +61,8 @@ $mobile_middle_ad_break_left_margin: $mobile_ad_width + $page-padding--small*2
 		@extend %ad__mr__label
 	&__inner
 		@extend %ad__mr__inner
+	&--on-article
+		clear: both
 	&--on-centerpage
 		margin: 0 auto remify(45px) auto
 		+respond-min($break-2)
@@ -78,6 +80,8 @@ $mobile_middle_ad_break_left_margin: $mobile_ad_width + $page-padding--small*2
 		@extend %ad__mr__label
 	&__inner
 		@extend %ad__mr__inner
+	&--on-article
+		clear: both
 	&--on-centerpage
 		margin: 0 auto $compact auto
 		+respond-min($break-2)
