--- a/sass/web.site/modules/article/_portraitbox.sass
+++ b/sass/web.site/modules/article/_portraitbox.sass
@@ -1,5 +1,6 @@
 .portraitbox
 	+default-article-textlink
+	clear: both
 	font-family: $font-tabletgothic
 	font-size: remify(14px)
 	line-height: 1.2
