ZON-1572: Change teaser_block to module for videostage

--- a/src/zeit/web/site/templates/inc/module/videostage.html
+++ b/src/zeit/web/site/templates/inc/module/videostage.html
@@ -3,20 +3,20 @@
     <header>
         <h6 class="video-stage-heading">Videos auf <span class="video-stage-heading__logo icon-logo-zon-large">ZEIT ONLINE</span></h6>
     </header>
-    {% set video_module = teaser_block %}
+    {% set video_module = module %}
     <div class="video-stage-main">
         {% with %}
-            {% set teaser_block = video_module[0] %}
-            {% set teaser = teaser_block | first_child %}
-            {% include ["zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout | hide_none + ".tpl",
+            {% set module = video_module[0] %}
+            {% set teaser = module | first_child %}
+            {% include ["zeit.web.site:templates/inc/teaser/" + module | get_teaser_layout | hide_none + ".tpl",
                         "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
         {% endwith %}
     </div>
     <div class="video-stage-secondary">
         <h6 class="video-stage-secondary__title">Die neuesten Videos</h6>
-        {% for teaser_block in video_module[1:4] %}
-            {% set teaser = teaser_block | first_child %}
-            {% include ["zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout | hide_none + ".tpl",
+        {% for module in video_module[1:4] %}
+            {% set teaser = module | first_child %}
+            {% include ["zeit.web.site:templates/inc/teaser/" + module | get_teaser_layout | hide_none + ".tpl",
                         "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
         {% endfor %}
     </div>
