ZON-1328: Add highlighting for actual tab

--- a/sass/web.site/modules/article/_infobox.sass
+++ b/sass/web.site/modules/article/_infobox.sass
@@ -94,6 +94,8 @@
 		line-height: remify(20px)
 		padding: remify(15px 0 11px 0)
 		text-transform: uppercase
+		&--checked
+			color: $zon-charcoal
 	&__content
 		+respond-min($break-tablet-min)
 			display: table-cell
