--- a/sass/web.site/modules/article/_infobox.sass
+++ b/sass/web.site/modules/article/_infobox.sass
@@ -66,6 +66,9 @@
 				line-height: remify(23px)
 		figure
 			margin: remify(10px) 0
+			+old-ie
+				.lt-ie9 &
+					display: none
 		.figure__caption
 			font-size: remify(14px)
 			line-height: 1.3
@@ -108,7 +111,7 @@
 // sorry for that, http://i.giphy.com/sSlq4iEQ4KdDa.gif
 .infobox__checkbox:checked ~ .infobox__title > .infobox__label:after
 	content: "–"
-.infobox__checkbox:checked 
+.infobox__checkbox:checked
 	& ~ .infobox__inner
 		height: auto
 		max-height: 100em
@@ -121,3 +124,7 @@
 			height: auto
 			max-height: 100em
 			+transition(max-height 0.5s ease-in-out)
++old-ie
+	.lt-ie-9 .infobox .infobox__inner--active
+		height: auto
+		max-height: 100em
