--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -67,6 +67,8 @@
     {% endprofile %}
     </article>
     {% endblock content %}
+    {% block article_interactions %}
+    {% endblock %}
     {% block comments %}
     {% profile %}
     <section class="comment-section" id="comments">
