ZON-1328: Add A11Y features

--- a/sass/web.site/modules/article/_infobox.sass
+++ b/sass/web.site/modules/article/_infobox.sass
@@ -16,7 +16,7 @@
 			border: none
 	&__label
 		display: block
-		color: $zon_grey
+		color: $zon_dark_grey
 		cursor: pointer
 		font-family: $font-tabletgothic
 		font-size: remify(14px)
@@ -55,7 +55,7 @@
 		// for backwards compatibility puposes
 		// sorry for that, http://i.giphy.com/sSlq4iEQ4KdDa.gif
 		p
-			color: $zon_grey
+			color: $zon_dark_grey
 			font-family: $font-tabletgothic
 			font-size: remify(14px)
 			line-height: remify(20px)
@@ -88,7 +88,7 @@
 			border: none
 	&__navlabel
 		display: block
-		color: $zon_grey
+		color: $zon_dark_grey
 		cursor: pointer
 		font-family: $font-tabletgothic
 		font-size: remify(14px)
