ZON-1541: Further transform parquet and spektrum areas

--- a/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
+++ b/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
@@ -1,7 +1,3 @@
-{% set row = view.spektrum_hp_feed %}
-
-{% if row | length %}
-{% profile %}
 <div class="cp-area cp-area--parquet" id="parquet">
     <div class="parquet-row parquet-row--spektrum" id="parquet-spektrum">
         {%- if parquet_position -%}
@@ -28,12 +24,11 @@
             </div>
         </div>
         <ul class="parquet-teasers">
-            {% for teaser in row[:3] -%}
+            {% for module in area.values() -%}
                 {% set teaser_track_id = loop.cycle('a', 'b', 'c') %}
+                {% set teaser = module | first_child %}
                 {% include ["zeit.web.site:templates/inc/parquet/zon-parquet-small-spektrum.tpl"] %}
             {% endfor %}
         </ul>
     </div>
 </div>
-{% endprofile %}
-{% endif %}
