--- a/sass/web.site/modules/_inline-gallery.sass
+++ b/sass/web.site/modules/_inline-gallery.sass
@@ -4,6 +4,7 @@ $break-gallery-min: em(576px)
 
 .inline-gallery__wrap
     @extend .gallery
+    clear: both // to prevent collisions with in-article ads
 
 .inline-gallery
     figure
