--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -65,6 +65,7 @@
 @import "modules/article/metadata"
 @import "modules/pagination"
 @import "modules/article/portraitbox"
+@import "modules/article/article-interactions"
 
 // article - column
 @import "modules/article/column-heading"
